--- a/m2m-watchdog.conf
+++ b/m2m-watchdog.conf
@@ -5,12 +5,12 @@ threshold = 99
 
 [Voldemort]
 script = /etc/init.d/voldemort
-pidfile = /var/run/voldemort
+pidfile = /var/run/voldemort.pid
 port = 
 is_java = yes
               
 [M2M Gateway]
-script = /home/ptonini/m2m_gateway/m2mgtw
-pidfile = /home/ptonini/m2m_gateway/m2m_gateway.pid
+script = /etc/init.d/m2mgtw
+pidfile = /var/run/m2m_gateway.pid
 port = 2800
 is_java = yes
