--- a/m2m-watchdog.conf
+++ b/m2m-watchdog.conf
@@ -3,14 +3,8 @@ cronfile = /tmp/cronfile.tmp
 sampling = 3
 threshold = 99
 
-[Voldemort]
-script = /etc/init.d/voldemort
-pidfile = /var/run/voldemort.pid
-port = 
-is_java = yes
-              
-[M2M Gateway]
-script = /etc/init.d/m2mgtw
-pidfile = /var/run/m2m_gateway.pid
-port = 2800
-is_java = yes
+[MongoD]
+script = mongod
+pidfile = /var/run/mongodb.pid
+port = 27017
+is_java = no
