--- a/m2m-watchdog.conf
+++ b/m2m-watchdog.conf
@@ -3,14 +3,9 @@ cronfile = /tmp/cronfile.tmp
 sampling = 3
 threshold = 99
 
-[Voldemort]
+[sshd]
 script = /etc/init.d/voldemort
-pidfile = /var/run/voldemort.pid
-port = 
-is_java = yes
-              
-[M2M Gateway]
-script = /etc/init.d/m2mgtw
-pidfile = /var/run/m2m_gateway.pid
-port = 2800
-is_java = yes
+pidfile = /var/run/sshd.pid
+port = 22a
+is_java = no
+
