--- a/m2m-watchdog.conf
+++ b/m2m-watchdog.conf
@@ -9,3 +9,8 @@ pidfile = /var/run/sshd.pid
 port = 22
 is_java = no
 
+[mongodb]
+script = /etc/init.d/voldemort
+pidfile = /var/lib/mongodb/mongod.lock
+port = 27017
+is_java = no
